--- a/plugins/display/tasks/observer/processlist_stat.yaml
+++ b/plugins/display/tasks/observer/processlist_stat.yaml
@@ -1,6 +1,6 @@
-info_en: "[lvss]"
-info_cn: "[processlist实时会话信息汇总]"
-command: obdiag display scene run --scene=observer.lvss
+info_en: "[processlist_stat]"
+info_cn: "[processlist 实时会话信息汇总]"
+command: obdiag display scene run --scene=observer.processlist_stat
 task:
   - version: "[*,3.0.0.0]"
     steps:
