--- a/plugins/display/tasks/observer/plan_explain.yaml
+++ b/plugins/display/tasks/observer/plan_explain.yaml
@@ -1,6 +1,6 @@
-info_en: "[aplan]"
-info_cn: "[实际执行计划信息]"
-command: obdiag display scene run --scene=observer.aplan  --env svr_ip=test --env tenant_id=test --env plan_id=test
+info_en: "[plan_explain]"
+info_cn: "[实际执行计划算子信息]"
+command: obdiag display scene run --scene=observer.plan_explain  --env svr_ip=test --env svr_port=2882 --env tenant_id=test --env plan_id=test
 task:
   - version: "[*,*]"
     steps:
@@ -8,7 +8,7 @@ task:
         sql: "select plan_id, operator, name, rows, cost
   from oceanbase.__all_virtual_plan_cache_plan_explain
  where svr_ip = '#{svr_ip}'
-   and svr_port = 2882
+   and svr_port = '#{svr_port}'
    and tenant_id = '#{tenant_id}'
    and plan_id = '#{plan_id}'"
         global: true       
