--- a/plugins/display/tasks/observer/lock_table.yaml
+++ b/plugins/display/tasks/observer/lock_table.yaml
@@ -7,7 +7,7 @@ task:
       - type: sql
         sql: "select * from  (select a.tenant_id,a.svr_ip,a.table_id,c.table_name,a.session_id,substring_index(substring_index(a.trans_id,',',1),':',-1) hash,a.ctx_create_time,a.expired_time,timestampdiff(second,date_format(a.ctx_create_time,'%Y-%m-%d %T'),now())  wait_time_s
 from oceanbase.__all_virtual_trans_lock_stat a 
-left join oceanbase.__all_virtual_table c on a.table_id=c.table_id ) t where t.table_name like '%#{tablename}%';"
+left join oceanbase.__all_virtual_table c on a.table_id=c.table_id ) t where t.table_name = '#{tablename}';"
         global: true
   - version: "[4.0.0,*]"
     steps:
@@ -15,5 +15,5 @@ left join oceanbase.__all_virtual_table c on a.table_id=c.table_id ) t where t.t
         sql: "select * from  (select a.tenant_id,a.svr_ip,a.ls_id,a.table_id,c.table_id table_actual_id,c.table_name,a.tablet_id,a.session_id,a.ctx_create_time,timestampdiff(second,date_format(a.ctx_create_time,'%Y-%m-%d %T'),now())  wait_time_s
 from oceanbase.__all_virtual_trans_lock_stat a 
 left join oceanbase.__all_virtual_tablet_to_ls b on b.tablet_id=a.tablet_id
-left join oceanbase.__all_virtual_table c on b.table_id=c.table_id) t where t.table_name like '%#{tablename}%';"
+left join oceanbase.__all_virtual_table c on b.table_id=c.table_id) t where t.table_name = '#{tablename}';"
         global: true
