--- a/plugins/display/tasks/observer/database_datasize.yaml
+++ b/plugins/display/tasks/observer/database_datasize.yaml
@@ -2,7 +2,7 @@ info_en: "[database data_size]"
 info_cn: "[查看库占用磁盘大小]"
 command: obdiag display scene run --scene=observer.database_datasize --env tenant_id=1 --env database_name=test
 task:
-  - version: "[4.0.0.0, *]"
+  - version: "[4.2.0.0, *]"
     steps:
       - type: sql
         sql:
@@ -15,7 +15,20 @@ task:
           AND  c.tenant_id = #{tenant_id}  AND b.table_type >= 10 AND b.size > 0 AND a.TABLE_NAME NOT REGEXP '^__'
           and a.database_name='#{database_name}' GROUP BY a.TABLE_ID) group by database_name;"
         global: true
-  - version: "[3.0.0.0, 4.0.0.0]"
+  - version: "[4.0.0.0, 4.1.9.9]"
+    steps:
+      - type: sql
+        sql:
+          "select tenant_id,tenant_name,DATABASE_NAME,sum(data_size_in_B) as data_size_in_B  from
+          (SELECT /*+ query_timeout(30000000) */  a.TENANT_ID, c.tenant_name, a.DATABASE_NAME, a.TABLE_NAME, a.TABLE_ID,
+          SUM(IFNULL(b.data_block_count + b.index_block_count + b.linked_block_count, 0) * 2 * 1024 * 1024) AS data_size_in_B
+          FROM oceanbase.CDB_OB_TABLE_LOCATIONS a INNER JOIN oceanbase.__all_virtual_table_mgr b ON a.svr_ip = b.svr_ip
+          AND a.svr_port = b.svr_port AND a.tenant_id = b.tenant_id AND a.LS_ID = b.LS_ID AND a.TABLET_ID = b.TABLET_ID
+          inner join oceanbase.__all_tenant c on a.tenant_id=c.tenant_id WHERE a.role = 'LEADER'
+          AND  c.tenant_id = #{tenant_id}  AND b.table_type >= 10 AND b.size > 0 AND a.TABLE_NAME NOT REGEXP '^__'
+          and a.database_name='#{database_name}' GROUP BY a.TABLE_ID) group by database_name;"
+        global: true
+  - version: "[3.0.0.0, 3.9.9.9]"
     steps:
       - type: sql
         sql:
