--- a/plugins/display/tasks/observer/server_info.yaml
+++ b/plugins/display/tasks/observer/server_info.yaml
@@ -2,12 +2,21 @@ info_en: "[server info]"
 info_cn: "[server 信息展示]"
 command: obdiag display scene run --scene=observer.server_info
 task:
-  - version: "[*,*]"
+  - version: "[4.2.0.0,*]"
     steps:
       - type: sql
         sql: "select  b.info cluster_name,a.svr_ip,a.with_rootserver rs,a.zone,
 ora_decode(a.start_service_time,0,null,date_format(usec_to_time(a.start_service_time),'%Y-%m-%d %h:%i:%s')) start_service_time,
 ora_decode(a.last_offline_time,0,null,date_format(usec_to_time(a.last_offline_time),'%Y-%m-%d %h:%i:%s'))  last_offline_time,
+ora_decode(a.stop_time,0,null,date_format(usec_to_time(a.stop_time),'%Y-%m-%d %h:%i:%s')) stop_time,
+a.status,SUBSTR(a.build_version, 1, INSTR(build_version, '-') - 1) build_version  
+from  oceanbase.__All_server a ,oceanbase.__all_zone b where  b.name='cluster' order by a.zone,a.svr_ip; "
+        global: true
+  - version: "[*,4.1.9.9]"
+    steps:
+      - type: sql
+        sql: "select  b.info cluster_name,a.svr_ip,a.with_rootserver rs,a.zone,
+ora_decode(a.start_service_time,0,null,date_format(usec_to_time(a.start_service_time),'%Y-%m-%d %h:%i:%s')) start_service_time,
 ora_decode(a.stop_time,0,null,date_format(usec_to_time(a.stop_time),'%Y-%m-%d %h:%i:%s')) stop_time,
 a.status,SUBSTR(a.build_version, 1, INSTR(build_version, '-') - 1) build_version  
 from  oceanbase.__All_server a ,oceanbase.__all_zone b where  b.name='cluster' order by a.zone,a.svr_ip; "
