--- a/plugins/display/tasks/observer/tenant_info.yaml
+++ b/plugins/display/tasks/observer/tenant_info.yaml
@@ -2,7 +2,7 @@ info_en: "[tenant info]"
 info_cn: "[租户信息展示]"
 command: obdiag display scene run --scene=observer.tenant_info --env tenant_name=test
 task:
-  - version: "[4.0.0.0, *]"
+  - version: "[4.1.9.9, *]"
     steps:
       - type: sql
         sql: "select /*+ READ_CONSISTENCY(WEAK) query_timeout(100000000)*/ tenant_name, tenant_type, primary_zone, locality, tenant_role from oceanbase.dba_ob_tenants where tenant_name = '#{tenant_name}' and tenant_type in ('SYS','USER');"
@@ -10,7 +10,12 @@ task:
       - type: sql  
         sql: "select /*+ READ_CONSISTENCY(WEAK) query_timeout(100000000)*/ dot.tenant_name, dou.zone, dou.svr_ip observer, cotl.replica_type, dou.max_cpu cpu, concat(round(dou.memory_size/1024/1024/1024,0), 'G') memory_size, concat(round(dou.log_disk_size/1024/1024/1024,0), 'G') log_disk_size, concat(round(sum(cotr.data_size)/1024/1024/1024, 2), 'G') data_size, concat(round(sum(cotr.required_size)/1024/1024/1024, 2), 'G') required_size, dot.unit_num from oceanbase.dba_ob_tenants dot, oceanbase.dba_ob_units dou, oceanbase.cdb_ob_table_locations cotl, oceanbase.cdb_ob_tablet_replicas cotr where tenant_name = '#{tenant_name}' and dot.tenant_id = dou.tenant_id and dot.tenant_id = cotl.tenant_id and dou.svr_ip = cotl.svr_ip and cotl.tenant_id = cotr.tenant_id and cotl.svr_ip = cotr.svr_ip and cotl.ls_id = cotr.ls_id and cotl.tablet_id = cotr.tablet_id group by dot.tenant_id, cotl.svr_ip order by dot.tenant_id, zone, cotl.svr_ip;"
         global: true
-  - version: "[3.0.0.0, 4.0.0.0]"
+  - version: "[4.0.0.0, 4.1.9.9]"
+    steps:
+      - type: sql
+        sql: "select   tenant_id,tenant_name,zone_list,primary_zone,status from  oceanbase.__all_tenant where tenant_name = '#{tenant_name}';"
+        global: true
+  - version: "[3.0.0.0, 3.9.9.9]"
     steps:
       - type: sql
         sql: "select /*+ READ_CONSISTENCY(WEAK) query_timeout(100000000)*/ \"tenant_name\" stat_name, tenant_name value  from oceanbase.__all_tenant where tenant_name='#{tenant_name}' 
