--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -34,14 +34,7 @@ jobs:
           source activate obdiag
           pwd
           ls -lh
-          export RELEASE=`date +%Y%m%d%H%M`
-          sed -i 's/pip install -r requirements3.txt/curl https:\/\/bootstrap.pypa.io\/get-pip.py -o get-pip.py\n\
-          python3 get-pip.py\n\
-          pip3 install -r requirements3.txt/' ./rpm/oceanbase-diagnostic-tool.spec
-          python3 -m pip install --upgrade pip wheel
-          cat ./rpm/oceanbase-diagnostic-tool.spec
-          python3 --version
-          rpmbuild -bb ./rpm/oceanbase-diagnostic-tool.spec
+          bash dev_helper.sh pack
 
       - name: Find rpm
         run: |
