fix 'find' command && delete gather_obproxy_log.py

--- a/plugins/check/tasks/observer/cluster/data_path_settings.yaml
+++ b/plugins/check/tasks/observer/cluster/data_path_settings.yaml
@@ -3,7 +3,7 @@ task:
   - version: "[4.0.0.0,*]"
     steps:
     - type: ssh
-      ssh: 'find #{remote_data_dir} -name "sstable"'
+      ssh: 'find #{remote_data_dir}/ -name "sstable"'
       result:
         set_value: data_dir_path
         verify: '[ -n "${data_dir_path}" ]'
