--- a/plugins/check/tasks/observer/tenant/tenant_min_resource.yaml
+++ b/plugins/check/tasks/observer/tenant/tenant_min_resource.yaml
@@ -4,10 +4,10 @@ task:
     steps:
     - type: sql
       sql: '  SELECT  GROUP_CONCAT(DISTINCT T4.TENANT_ID)
-FROM DBA_OB_RESOURCE_POOLS T1 
-JOIN DBA_OB_UNIT_CONFIGS T2 ON T1.UNIT_CONFIG_ID = T2.UNIT_CONFIG_ID 
-JOIN DBA_OB_UNITS T3 ON T1.RESOURCE_POOL_ID = T3.RESOURCE_POOL_ID 
-JOIN DBA_OB_TENANTS T4 ON T1.TENANT_ID = T4.TENANT_ID 
+FROM oceanbase.DBA_OB_RESOURCE_POOLS T1 
+JOIN oceanbase.DBA_OB_UNIT_CONFIGS T2 ON T1.UNIT_CONFIG_ID = T2.UNIT_CONFIG_ID 
+JOIN oceanbase.DBA_OB_UNITS T3 ON T1.RESOURCE_POOL_ID = T3.RESOURCE_POOL_ID 
+JOIN oceanbase.DBA_OB_TENANTS T4 ON T1.TENANT_ID = T4.TENANT_ID 
 WHERE T4.TENANT_ID>1  AND T2.MAX_CPU < 2 OR ROUND(T2.MEMORY_SIZE/1024/1024/1024,2) < 4 ;'
       result:
         set_value: too_small_tenant
