--- a/plugins/gather/tasks/observer/suspend_transaction.yaml
+++ b/plugins/gather/tasks/observer/suspend_transaction.yaml
@@ -73,10 +73,10 @@ task:
         sql: "show parameters like '%syslog_io_bandwidth_limit%';"
         global: true
       - type: sql
-        sql: "SHOW VARIABLES LIKE 'ob_trx_idle_timeout';"
+        sql: "select * from oceanbase.__all_virtual_sys_variable where name like  'ob_trx_idle_timeout';"
         global: true
       - type: sql
-        sql: "SHOW VARIABLES LIKE 'ob_trx_timeout';"
+        sql: "select * from oceanbase.__all_virtual_sys_variable where name like  'ob_trx_timeout';"
         global: true
       - type: sql
         sql: "SELECT count(1) FROM oceanbase.GV$OB_TRANSACTION_PARTICIPANTS WHERE CTX_CREATE_TIME < date_sub(now(), INTERVAL 600 SECOND) AND (STATE = 'PREPARE' OR STATE = 'REDO COMPLETE' OR STATE ='PRECOMMIT');"
