charge translator to APPEND_TRANSLATION be true

--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -26,4 +26,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           IS_MODIFY_TITLE: true
-          APPEND_TRANSLATION: false
+          APPEND_TRANSLATION: true
