--- a/plugins/check/tasks/observer/network/network_offset.yaml
+++ b/plugins/check/tasks/observer/network/network_offset.yaml
@@ -3,6 +3,13 @@ task:
   - version: "[4.0.0.0,*]"
     steps:
     - type: local_ssh
+      ssh: 'if command -v clockdiff &>/dev/null; then     echo "exist"; fi'
+      result:
+        set_value: clockdiff_exist
+        report_type: execution
+        verify: '[ "exist" != "${clockdiff_exist}" ]'
+        err_msg: '[not warning] clockdiff is exist. We will check the clockdiff'
+    - type: local_ssh
       ssh: 'clockdiff -o #{remote_ip}'
       result:
         set_value: clockdiff
