--- a/plugins/check/tasks/observer/sysbench/sysbench_free_test_network_speed.yaml
+++ b/plugins/check/tasks/observer/sysbench/sysbench_free_test_network_speed.yaml
@@ -20,7 +20,7 @@ task:
         verify_type: min
         verify: 999
         #report_type: warning
-        err_msg: "network_speed is #{network_speed} , less than #{network_speed}"
+        err_msg: "network_speed is #{network_speed} , less than 1000"
 
         
         
