--- a/plugins/check/tasks/observer/network/network_speed.yaml
+++ b/plugins/check/tasks/observer/network/network_speed.yaml
@@ -6,7 +6,7 @@ task:
       sql: 'select VALUE from oceanbase.GV$OB_PARAMETERS where  NAME="devname" and SVR_IP="#{remote_ip}" ;'
       result:
         set_value: network_name
-        verify: '[[  $network_name == "lo" ]]'
+        verify: '[[ ! $network_name == "lo" ]]'
         err_msg: "check network_name is lo , can not get real speed"
     # for k8s
     - type: ssh
