--- a/.github/workflows/python_file_header_check.yml
+++ b/.github/workflows/python_file_header_check.yml
@@ -17,12 +17,9 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
 
       - name: Run header check
-        run: python check_py_files.py .
+        run: python rpm/check_py_files.py .
         working-directory: ${{ github.workspace }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
