--- a/plugins/check/tasks/observer/sysbench/sysbench_run_test_tenant_memory_used.yaml
+++ b/plugins/check/tasks/observer/sysbench/sysbench_run_test_tenant_memory_used.yaml
@@ -1,4 +1,4 @@
-info: 'Check when sysbench free , cluster info about network_speed'
+info: 'Check when sysbench free , cluster info about memory used and memory hold'
 task:
   - version: "[4.0.0.0,*]"
     steps:
