--- a/plugins/check/tasks/observer/sysbench/sysbench_test_tenant_primary_zone.yaml
+++ b/plugins/check/tasks/observer/sysbench/sysbench_test_tenant_primary_zone.yaml
@@ -1,4 +1,4 @@
-info: 'Check when running sysbench, cluster paramters'
+info: 'Check when running sysbench, cluster info about tenant primary zone'
 task:
   - version: "[4.0.0.0,*]"
     steps:
