--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,45 +9,8 @@ env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
 jobs:
-  build-rpm:
-    name: Run on CentOS 7
-    runs-on: ubuntu-latest
-    container:
-      image: "oceanbase/obdiag-builder:latest"
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: |
-          export PATH=/opt/miniconda3/bin:$PATH
-          source activate obdiag
-          ldd --version
-          pip3 install -r requirements3.txt
-
-      - name: Build package
-        run: |
-          export PATH=/opt/miniconda3/bin:$PATH
-          source activate obdiag
-          pwd
-          ls -lh
-          bash dev_helper.sh pack
-
-      - name: Find rpm
-        run: |
-          find / -name oceanbase-diagnostic-tool-*.rpm
-
-      - name: "Upload rpm"
-        uses: actions/upload-artifact@v4
-        with:
-          name: obdiag-rpm-packages
-          path: |
-            /github/home/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
-          retention-days: 3
-
   run-with-observer:
-    needs: build-rpm
+    #needs: build-rpm
     name: run-with-observer
     runs-on: ubuntu-latest
     container:
@@ -60,12 +23,13 @@ jobs:
         path: .
     - name: install obdiag
       run: |
+        yum install -y wget
+        wget https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/download-center/opensource/obdiag/v3.2.0/oceanbase-diagnostic-tool-3.2.0-52025031411.el7.x86_64.rpm
         yum install -y ./oceanbase-diagnostic-tool-*.rpm
         ls ~/
       # analyzer
       # check
         obdiag check list
-        obdiag check run
       # display
       # gather
         obdiag gather scene list
