--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         set -e
         yum install -y wget \
           && wget https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/download-center/opensource/obdiag/v3.2.0/oceanbase-diagnostic-tool-3.2.0-52025031411.el7.x86_64.rpm \
-          && yum install -y ./oceanbase-diagnostic-tool-*.rpm && cp example/mini.yml /root/.obdiag/config.yml
+          && yum install -y ./oceanbase-diagnostic-tool-*.rpm && cp example/mini.yml /root/.obdiag/config.yml && cp -r /root/.obdiag /github/home
     - name: run obdiag checks
       run: |
         ls ~/
