--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,14 +20,14 @@ jobs:
     - name: install obdiag
       run: |
         set -e
-        docker run -itd --name "obdiag_ob" oceanbase/oceanbase-ce:4.3.0
+        docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.3.0
         bash workflow_data/wait_observer_run.sh 
-        docker exec -it obdiag_ob /bin/bash -c "bash /root/wait_observer_run.sh"
-        docker exec -it obdiag_ob /bin/bash -c "yum install -y wget && wget https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/download-center/opensource/obdiag/v3.2.0/oceanbase-diagnostic-tool-3.2.0-52025031411.el7.x86_64.rpm"
-        docker exec -it obdiag_ob /bin/bash -c "yum install -y ./oceanbase-diagnostic-tool-*.rpm"
+        docker exec -i obdiag_ob /bin/bash -c "bash /root/wait_observer_run.sh"
+        docker exec -i obdiag_ob /bin/bash -c "yum install -y wget && wget https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/download-center/opensource/obdiag/v3.2.0/oceanbase-diagnostic-tool-3.2.0-52025031411.el7.x86_64.rpm"
+        docker exec -i obdiag_ob /bin/bash -c "yum install -y ./oceanbase-diagnostic-tool-*.rpm"
         docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
-        docker exec -it obdiag_ob /bin/bash -c "obdiag check list"
-        docker exec -it obdiag_ob /bin/bash -c "obdiag check run"
+        docker exec -i obdiag_ob /bin/bash -c "obdiag check list"
+        docker exec -i obdiag_ob /bin/bash -c "obdiag check run"
 
 #    - name: run obdiag checks
 #      run: |
