--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -2,11 +2,9 @@ name: build package
 
 on:
   pull_request:
-    branches:
-      - master
+    branches: "*"
   push:
-    branches:
-      - master
+    branches: "*"
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
@@ -78,3 +76,26 @@ jobs:
           name: obdiag-deb-package
           path: ./oceanbase-diagnostic-tool_*.deb
           retention-days: 3
+  run-with-observer:
+    name: run-with-observer
+    runs-on: ubuntu-latest
+    needs: build-rpm
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Download RPM Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: obdiag-rpm-packages
+          path: .
+      - name: install obdiag and run obdiag test
+        run: |
+          set -e
+          docker run -id --name "obdiag_ob" oceanbase/oceanbase-ce:4.3.0
+          bash workflow_data/wait_observer_run.sh 
+          docker cp oceanbase-diagnostic-tool-*.rpm obdiag_ob:/root/oceanbase-diagnostic-tool.rpm
+          docker exec -i obdiag_ob /bin/bash -c "yum install -y /root/oceanbase-diagnostic-tool-*.rpm"
+          docker cp example/mini.yml obdiag_ob:/root/.obdiag/config.yml
+          docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
+          docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
+          echo "obdiag install success"
