--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -2,9 +2,11 @@ name: build package
 
 on:
   pull_request:
-    branches: "*"
+    branches:
+      - master
   push:
-    branches: "*"
+    branches:
+      - master
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
