--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -99,7 +99,7 @@ jobs:
           docker cp workflow_data/run_obdiag_test.sh obdiag_ob:/root/run_obdiag_test.sh
           docker exec -i obdiag_ob /bin/bash -c "sh /root/run_obdiag_test.sh"
           echo "obdiag install success"
-  run-with-observer-4.0.0:
+  run-with-observer-4_0_0:
     name: run-with-observer
     runs-on: ubuntu-latest
     needs: build-rpm
